# couscous

./: .gitignore  couscous.kicad_prl  couscous.kicad_pro  couscous.kicad_sch  fp-lib-table  sym-lib-table
firmware/couscous/: Cargo.toml
firmware/couscous/.cargo/: config.toml
firmware/couscous/src/: direction.rs  key_mapping.rs  layer_position.rs  main.rs  position.rs  rp2040_monotonic.rs
libs/qwelyt/qwelyt.pretty/: LED_RGBW_SMD_5050.kicad_mod  SW_choc_MX_combo.kicad_mod
pcb/: couscous.kicad_prl  couscous.kicad_pro
pcb/libs/qwelyt/: qwelyt.kicad_sym
pcb/libs/qwelyt/qwelyt.pretty/: TRIM_3352T-1-104LF.kicad_mod
