[package]
name = "couscous"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.7"
usb-device = "0.2.8"
usbd-serial = "0.1.1"
usbd-hid = "0.6.1"
cortex-m = "0.7.5"
cortex-m-rt = { version = "0.7.1", optional = true }
cortex-m-rtic = "1.1.2"
byteorder = { version = "1.4.3", default-features = false }
panic-halt = "0.2.0"
seeeduino-xiao-rp2040 = "0.2.0"
rp2040-boot2 = { version = "0.2.0", optional = true }
rp2040-hal = "0.6.0"
heapless = "0.7.16"
smart-leds = "0.3.0"
pio = "0.2.0" #{ git = "https://github.com/rp-rs/pio-rs.git", branch = "main" }
ws2812-pio = "0.4.0" #{ git = "https://github.com/ithinuel/ws2812-pio-rs" }
rp2040-monotonic = "1.1.0"

[dev-dependencies]
elf2uf2-rs = "1.3.7"

[features]
# This is the set of features we enable by default
default = ["boot2", "rt", "critical-section-impl", "rom-func-cache"]

# critical section that is safe for multicore use
critical-section-impl = ["rp2040-hal/critical-section-impl"]

# 2nd stage bootloaders for rp2040
boot2 = ["rp2040-boot2"]

# Minimal startup / runtime for Cortex-M microcontrollers
rt = ["cortex-m-rt", "rp2040-hal/rt"]

# This enables a fix for USB errata 5: USB device fails to exit RESET state on busy USB bus.
# Only required for RP2040 B0 and RP2040 B1, but it also works for RP2040 B2 and above
rp2040-e5 = ["rp2040-hal/rp2040-e5"]

# Memoize(cache) ROM function pointers on first use to improve performance
rom-func-cache = ["rp2040-hal/rom-func-cache"]

# Disable automatic mapping of language features (like floating point math) to ROM functions
disable-intrinsics = ["rp2040-hal/disable-intrinsics"]

# This enables ROM functions for f64 math that were not present in the earliest RP2040s
rom-v2-intrinsics = ["rp2040-hal/rom-v2-intrinsics"]